--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node app.js"
   },
   "devDependencies": {
-    "nodemon" : "*"
+    "nodemon" : "*",
+    "pm2" : "*"
     },
   "dependencies": {
     "express": "3.4.8",
